@@ -43,6 +43,7 @@ import org.codehaus.groovy.ast.stmt.Statement;
 import org.codehaus.groovy.control.CompilationUnit;
 import org.codehaus.groovy.control.CompilePhase;
 import org.codehaus.groovy.control.SourceUnit;
+import org.codehaus.groovy.control.io.StringReaderSource;
 import org.codehaus.groovy.runtime.DefaultGroovyMethods;
 import org.codehaus.groovy.tools.GrapeUtil;
 import org.codehaus.groovy.transform.ASTTransformation;
@@ -50,10 +51,8 @@ import org.codehaus.groovy.transform.ASTTransformationVisitor;
 import org.codehaus.groovy.transform.GroovyASTTransformation;
 
 import java.io.File;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -257,15 +256,29 @@ public class GrabAnnotationTransformation extends ClassCodeVisitorSupport implem
                     }
 
                     // If no scheme is specified for the repository root,
-                    // then turn it into a URL relative to that of the source file.
+                    // then turn it into a URI relative to that of the source file.
                     String root = (String) grabResolverMap.get("root");
                     if (root != null && !root.contains(":")) {
+                        URI sourceURI = null;
+                        // Since we use the data: scheme for StringReaderSources (which are fairly common)
+                        // and those are not hierarchical we can't use them for making an absolute URI.
+                        if (!(getSourceUnit().getSource() instanceof StringReaderSource)) {
+                            // Otherwise let's trust the source to know where it is from.
+                            // And actually InputStreamReaderSource doesn't know what to do and so returns null.
+                            sourceURI = getSourceUnit().getSource().getURI();
+                        }
+                        // If source doesn't know how to get a reference to itself,
+                        // then let's use the current working directory, since the repo can be relative to that.
+                        if (sourceURI == null) {
+                            sourceURI = new File(".").toURI();
+                        }
                         try {
-                            URL sourceURL = getSourceURL();
-                            URL rootURL = new URL(sourceURL, root);
-                            grabResolverMap.put("root", rootURL.toExternalForm());
-                        } catch (MalformedURLException e) {
-                            addError("Attribute \"root\" has value '" + root + "' which can't be turned into a valid URL relative to it's source '" + getSourceUnit().getName() + "' @" + node.getClassNode().getNameWithoutPackage() + " annotations", node);
+                            URI rootURI = sourceURI.resolve(new URI(root));
+                            grabResolverMap.put("root", rootURI.toString());
+                        } catch (URISyntaxException e) {
+                            // We'll be silent here.
+                            // If the URI scheme is unknown or not hierarchical, then we just can't help them and shouldn't cause any trouble either.
+                            // addError("Attribute \"root\" has value '" + root + "' which can't be turned into a valid URI relative to it's source '" + getSourceUnit().getName() + "' @" + node.getClassNode().getNameWithoutPackage() + " annotations", node);
                         }
                     }
 
@@ -356,23 +369,6 @@ public class GrabAnnotationTransformation extends ClassCodeVisitorSupport implem
                 source.addException(re);
             }
         }
-    }
-
-    /**
-     * Get the URL for the sourceUnit.  This belongs in org.codehaus.groovy.control.SourceUnit.
-     * @return URL URL for the sourceUnit.
-     */
-    private URL getSourceURL() throws MalformedURLException {
-        String sourceName = getSourceUnit().getName();
-        // If the source already has a scheme, then SourceUnit(URL, ...) was used.
-        if (!sourceName.contains(":")) {
-            // But if not then either SourceUnit(File, ...) or SourceUnit(String, ...) was used.
-            // When SourceUnit(File, ...) is used then name is set to the File.path.
-            File sourceFile = new File(sourceName);
-            sourceName = sourceFile.toURI().toURL().toExternalForm();
-        }
-
-        return new URL(sourceName);
     }
 
     private void callGrabAsStaticInitIfNeeded(ClassNode classNode, ClassNode grapeClassNode, List<Map<String,Object>> grabMapsInit, List<Map<String, Object>> grabExcludeMaps) {
